@@ -2,14 +2,6 @@
 <html>
 <head>
 <script src="../../js/resources/js-test-pre.js"></script>
-<style>
-input::before {
-  content: "lorem ipsum";
-  display: inline-block;
-  height: 20px;
-  background-color: red;
-}
-</style>
 </head>
 <body>
 <p id="description">Clicking middle of input type=range with padding should set the value to middle.</p>
